Increase z-index to ensure menu overlays other page elements

--- a/origins_translations/css/translations_ui.css
+++ b/origins_translations/css/translations_ui.css
@@ -15,6 +15,7 @@
 #origins-translation-container.ot-bl,
 #origins-translation-container.ot-br {
   position: absolute;
+  z-index: 101;
   width: 260px;
   max-height: 100%;
   overflow-y: scroll;
